# backupp-rep

./: .gitignore  README.md  gitignore  main.py  pyproject.toml  requirements.txt  setup.py  setup_config_pub.py  setup_helper.py  setup_options_class.py  tox.ini
.github/workflows/: python-package.yml
backupp/: Backup_base.py  Backup_src.py  Directory.py  __init__.py  _options.py  backup_with_path.py  colors.py  copy_ops.py  display.py  file_checks.py  file_classes.py  files.py  github_actions.py  globals.py  main_funcs_to_load.py  menu.py  onload_parser.py  options.cfg  py_template.py  read_ignore.py  read_ignore_helpers.py  read_ignore_templates.py  template_on_load.py  type_defs.py  utils.py
backupp/tests/: test_console_actions_.py  test_ignore.py  tests_main.py
test1/: .gitignore
test2/test1/static/: fileTree.txt
workflows/: python-package.yml
