[tool.poetry]
name = "backupp-repo"
version = "0.1.0"
description = "backups your folder to your preferred local or network location using gitignore template rules"
authors = ["Sermet Pekin <sermet.pekin@gmail.com>"]
readme = "README.md"
packages = [{include = "backupp_repo"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
